--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ img {
   width:60px;
   height: 60px;
   border-radius: 30px;
-  box-shadow: 5px 5px 5px grey;
+  box-shadow: 5px 5px 5px #626E91;
 }
 }
 body {
@@ -18,8 +18,6 @@ body {
 }
 ul, li {
   list-style: none;
-  /*margin:20px;*/
-  /*padding: 20px;*/
 }
 #container {
   width: 60%;
@@ -35,7 +33,7 @@ h1 {
 .title {
   height: 40px;
   background: #BCD6BA;
-  color: #fff;
+  color: #002DB1;
   text-align: center;
   padding-top: 13px;
   font-size: 1.2em;
@@ -43,7 +41,7 @@ h1 {
 
 }
 .factsList li{
-  padding: 20px;
+  padding: 15px;
   border: .5px solid #C7CACB;
 }
 .factsList li.question {
@@ -52,6 +50,8 @@ h1 {
   font-size: 1.3em;
   border-bottom: 1px solid #ddd;
   cursor: pointer;
+  line-height: 1.4em;
+
 }
 .rotate {
   -moz-transform: rotate(90deg);
@@ -61,8 +61,9 @@ h1 {
 .factsList li.answer {
   background: #ddd;
   display: none;
-  text-size: 1.1em;
-  color: #DB5500;
+  font-size: 1.3em;
+  color: #1149F9;
+  font-weight: bold;
 }
 @media(max-width: 800px) {
   #container {
